[package]
name = "bpftop"
version = "0.7.0"
edition = "2021"
description = "Dynamic real-time view of running eBPF programs"
license = "Apache-2.0"
authors = ["Jose Fernandez <josef@netflix.com>"]

[build-dependencies]
libbpf-cargo = "0.26.0-beta.1"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-journald = "0.3.1"
libbpf-rs = "0.26.0-beta.1"
libbpf-sys = "1.6.1"
crossterm = "0.28.1"
anyhow = "1.0.99"
ratatui = { version = "0.29.0", default-features = false, features = ['crossterm'] }
nix = { version = "0.30.1", features = ["user"] }
circular-buffer = "1.1.0"
procfs = "0.17.0"
tui-input = "0.14.0"
clap = { version = "4.5.45", features = ["derive"] }
